syntax = "proto3";
package com.github.axinger.api;
//option java_outer_classname = "Api";
// Define common status codes
enum StatusCode {
  UNKNOWN = 0;
  SUCCESS = 1;
  FAILURE = 2;
}
